# SanityEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md  SanityEngine.sln  SanityEngine.sln.DotSettings  nuget.config  vcpkg.json
D3D12Engine/: CMakeLists.txt
D3D12Engine/src/: D3D12Engine.cpp  D3D12Engine.hpp  d3d12_engine.cpp  d3d12_engine.hpp  settings.hpp
D3D12Engine/src/core/: abort.cpp  abort.hpp  constants.hpp  cvar_names.hpp  ensure.hpp  rex_profiler_adapter.cpp  rex_profiler_adapter.hpp
D3D12Engine/src/debugging/: renderdoc.cpp  renderdoc.hpp
D3D12Engine/src/logging/: stdoutstream.cpp  stdoutstream.hpp
D3D12Engine/src/render/: bind_group.hpp  command_list.hpp  compute_command_list.hpp  compute_pipeline_state.hpp  framebuffer.hpp  graphics_command_list.hpp  material.hpp  mesh_data_store.cpp  mesh_data_store.hpp  render_command_list.hpp  render_pipeline_state.hpp  renderer.cpp  renderer.hpp  resource_binder.hpp  resource_command_list.hpp  resources.cpp  resources.hpp
D3D12Engine/src/renderer/: renderer.cpp  renderer.hpp
D3D12Engine/src/rhi/: bind_group.hpp  command_list.hpp  compute_command_list.hpp  compute_pipeline_state.hpp  framebuffer.hpp  mesh_data_store.cpp  mesh_data_store.hpp  render_command_list.hpp  render_engine.cpp  render_engine.hpp  render_pipeline_state.hpp  resource_command_list.hpp  resources.hpp
D3D12Engine/src/windows/: windows_helpers.cpp  windows_helpers.hpp
SanityEngine/: .gitignore  ApplicationMenu.cpp  ApplicationMenu.h  CMakeLists.txt  DensityMapEditorUI.ixx  NodeEditorUi.ifc  NodeEditorUi.ixx  Sanity.Environment.ifc  Sanity.UI.Graph.Environment.ixx  Sanity.UI.Graph.ifc  SanityEngine.header_hero  SanityEngine.vcxproj  SanityEngine.vcxproj.filters  first_person_controller.cpp  first_person_controller.hpp  packages.config  resource.h  resource1.h  types.ifc  world.cpp  world.hpp
SanityEngine/Editor/: Sanity.Engine.main.cpp  SanityEditor.cpp  SanityEditor.hpp
SanityEngine/Editor/Input/: GlfwPlatformInput.cpp  GlfwPlatformInput.hpp
SanityEngine/Editor/UI/: NodeGraphNode.cpp  NodeGraphNode.hpp  PropertyEditors.cpp  PropertyEditors.hpp
SanityEngine/Unmerged/: SanityEngine.winmd
SanityEngine/data/shaders/: atmospheric_sky.pixel.hlsl  backbuffer_output.pixel.hlsl  chunk.vertex.hlsl  composite.compute.hlsl  debug.pixel.hlsl  debug.vertex.hlsl  fullscreen.vertex.hlsl  make_transparent_texture.compute.hlsl  opaque_chunk.pixel.hlsl  postprocessing.pixel.hlsl  raytracing_accumulation.pixel.hlsl  shadow.pixel.hlsl  standard.pixel.hlsl  standard.vertex.hlsl  terrain.pixel.hlsl  terrain.vertex.hlsl  ui.pixel.hlsl  ui.vertex.hlsl
SanityEngine/data/trains/: BestFriend.vox
SanityEngine/programs/editor/: SanityEditor.cpp  SanityEditor.hpp
SanityEngine/public/Sanity/: SanityEngine.idl
SanityEngine/runtimeclasses/: CMakeLists.txt
SanityEngine/runtimeclasses/SanityEngine/: world.idl
SanityEngine/scripts/: sanity_engine.wren
SanityEngine/scripts/engine/: engine.wren  terraingen.wren  ui.wren
SanityEngine/src/: globals.hpp  sanity_engine.cpp  sanity_engine.hpp  settings.hpp
SanityEngine/src/actor/: actor.cpp  actor.hpp
SanityEngine/src/adapters/: tracy.hpp
SanityEngine/src/bve/: bve_wrapper.cpp  bve_wrapper.hpp  train_components.hpp
SanityEngine/src/core/: ComponentJsonConversion.cpp  ComponentJsonConversion.hpp  EntityJsonConversion.cpp  GlmJsonConversion.hpp  IndexedContainerHandle.hpp  JsonConversion.hpp  Prelude.hpp  RexJsonConversion.cpp  RexJsonConversion.hpp  SmartEnum.hpp  VectorHandle.hpp  WindowsJsonConversion.cpp  WindowsJsonConversion.hpp  abort.cpp  abort.hpp  align.hpp  ansi_colors.hpp  asset_registry.cpp  asset_registry.hpp  class_id.cpp  class_id.hpp  components.cpp  components.hpp  constants.hpp  cvar_names.hpp  defer.hpp  ensure.cpp  ensure.hpp  errors.cpp  errors.hpp  pix_colors.hpp  transform.cpp  transform.hpp  types.hpp  types.ixx
SanityEngine/src/coreclr/: core_clr_host.cpp  core_clr_host.hpp  coreclr_host_api.hpp  example_host.cpp
SanityEngine/src/debugging/: renderdoc.cpp  renderdoc.hpp
SanityEngine/src/entity/: creation.cpp  creation.hpp
SanityEngine/src/game/: game.hpp
SanityEngine/src/input/: PlatformInput.cpp  PlatformInput.hpp  input_manager.cpp  input_manager.hpp
SanityEngine/src/loading/: asset_loader.cpp  asset_loader.hpp  entity_loading.cpp  entity_loading.hpp  image_loading.cpp  image_loading.hpp  mesh_loading.cpp  mesh_loading.hpp  shader_loading.cpp  shader_loading.hpp  shader_loading.ixx
SanityEngine/src/noise/: README.md
SanityEngine/src/player/: first_person_controller.cpp  first_person_controller.hpp  flycam_controller.cpp  flycam_controller.hpp
SanityEngine/src/renderer/: camera_matrix_buffer.cpp  camera_matrix_buffer.hpp  components.hpp  gpu_resource_pool.cpp  gpu_resource_pool.hpp  handles.hpp  lights.hpp  material.hpp  material_data_buffer.cpp  material_data_buffer.hpp  mesh.hpp  mesh_data_store.cpp  mesh_data_store.hpp  render_components.cpp  render_components.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  renderpass.cpp  renderpass.hpp  single_pass_downsampler.cpp  single_pass_downsampler.hpp  standard_material.hpp  texture.cpp  texture.hpp  textures.cpp  textures.hpp
SanityEngine/src/rhi/: bind_group.cpp  bind_group.hpp  command_list.cpp  command_list.hpp  compute_command_list.cpp  compute_command_list.hpp  compute_pipeline_state.hpp  d3dx12.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  framebuffer.hpp  helpers.cpp  helpers.hpp  mesh_data_store.cpp  mesh_data_store.hpp  raytracing_structs.hpp  render_command_list.cpp  render_command_list.hpp  render_device.cpp  render_device.hpp  render_pipeline_state.hpp  resource_command_list.cpp  resource_command_list.hpp  resources.cpp  resources.hpp
SanityEngine/src/scripting/: entity_scripting_api.cpp  entity_scripting_api.hpp  scripting_runtime.cpp  scripting_runtime.hpp
SanityEngine/src/serialization/: serialization.hpp
SanityEngine/src/stats/: framerate_tracker.cpp  (+1 more)
SanityEngine/tools/: compile_shaders.py  glm.natvis
(+524 files in other folders)
